# oliver-risc

./: .gitignore  .gitmodules  primes_output_emulation.txt  primes_output_simulation.txt  simulation_times.txt
hardware/: .gitignore  1231.vcd  CPU.flow.rpt  CPU.map.rpt  CPU.map.summary  CPU.qpf  CPU.qsf  CPU.qws  debugging.ods  dump.lxt  dump.vcd  icarus_output  logfile.txt  notes.txt  savefile.gtkw  sdcard_savefile.gtkw  simulation_log.txt  synth_times.txt  top.out.sdc  top.qpf  top.qsf  top.qws  top.sdc  top_nativelink_simulation.rpt  trace.sh
old_toolchain/: CMakeLists.txt  graph_temp.dot  test.asm  toolchain.sh
planning/: Compiler_Documentation.md  cpu_design.txt  math.txt  new_cpu_design.txt
programs/: decompressor.asm  direct_memory_addresses_test.asm  hello_world.pl0  interrupt_test.asm  keyboard_test_simple.pl0  mult_div_test.asm  primes_procedural.pl0  (+9 more)
toolchain/: CMakeLists.txt  globaltest.pl0  minimal.pl0  nested_loops.pl0  nested_loops.py  output.asm  output.asm.bak  primes.pl0  primes.pl0.bak  primes.py  primes_procedural.pl0  primes_wikipedia.pl0  processor.h  quick_cpu_test.pl0  run.sh  sd_card_toolchain.sh  test.asm  test.pl0  toolchain.sh
toolchain/assembler/: Makefile  assembler  assembler.c  assembler.h  assembler.py  assembler_parameters.py  assemblyparser.py  fibonacci.asm  instruction.py  label.py  lexer.l  othertest.asm  parser.y  stringproc.c  test.asm  variable.py
toolchain/assembler/assembler_c/: Makefile  assembler  assembler.h  otherothertest.asm  storetest.asm
toolchain/assembler/assembler_flex_bison/src/: assembler.h  lexer.l  parser.y
toolchain/assembler/src/: assembler.h  lexer.l  parser.y
toolchain/boot_screen_generator/src/: boot_screen_generator.c
toolchain/compiler/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  asmgenerator.cpp  asmgenerator.h  ast.cpp  ast.h  astbufferreadnode.cpp  astbufferreadnode.h  astbufferwritenode.cpp  astbufferwritenode.h  astexpressionnode.cpp  astexpressionnode.h  astinlineassemblynode.cpp  astnode.h  astprocedurecallnode.cpp  astprocedurecallnode.h  astprocedurenode.cpp  astprocedurenode.h  astprocedurereturnnode.h  astrootnode.cpp  astrootnode.h  asttermnode.h  astvariableassignmentnode.cpp  astvariabledeclarationnode.cpp  astwhileloopnode.h  compiler  compiler.py  dub.json  lexer.l  main.py  parser.y  stackframe.cpp  stackframe.h  syntaxparser.py  test.c  test.lisp  tokenizer.py
toolchain/compiler/source/: app.d  tokenizer.d
toolchain/compiler/src/: .ast.rs.swp  asmgenerator.cpp  asmgenerator.h  ast.cpp  ast.h  ast.rs  intermediaterepresentation.rs  language.pest  lexer.l  main.rs  parser.y  stackframe.cpp  stackframe.h  util.cpp  util.h
toolchain/compressor/: compressor.py  dict.txt  out.bin.short  out.bin.short.lzw  test.bin.lzw  test.txt.lzw
toolchain/compressor/reference_decompressor/: reference_decompressor.c
toolchain/cpu/: Cargo.toml
toolchain/cpu/src/: lib.rs
toolchain/disassembler/: Makefile  assembler.h  disas  disassembler  disassembler.c  disassembler.h  fuzzer  fuzzer_target.c  main.c
toolchain/emulator/: Makefile  assembler.h  emulator  emulator.c  test  test.c
toolchain/font_rom_generator/src/: font_rom_generator.c
toolchain/old_assembler/: Makefile  assembler  fibonacci.asm  fibonacci_slow.asm  stringproc.h
toolchain/romgenerator/: Makefile  rom.v  romgenerator  romgenerator.c
toolchain/rust_assembler/: Cargo.toml  fibonacci_slow.asm  small.asm  test.asm  test.asm.bak
toolchain/rust_assembler/src/: assembly.pest  assembly.pest.bak  main.rs  main.rs.bak
toolchain/rust_emulator/: Cargo.toml  x.csv
toolchain/rust_emulator/src/: main.rs
(+341 files in other folders)
