[package]
name = "rust_assembler"
version = "0.1.0"
authors = ["Oliver Lok Trevor <featherfeet5436@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
pest_ascii_tree = "0.1.0"
parse_int = "0.5.0"
